cmake_minimum_required(VERSION 3.15)

project(day09_smartPointer)

# practice smart pointer
add_executable(
	day09_smart_pointer_0
	day09_smart_pointer/smart_pointer_0.cpp
)
add_executable(
	day09_smart_pointer_1
	day09_smart_pointer/smart_pointer_1.cpp
)
add_executable(
	day09_smart_pointer_1_1
	day09_smart_pointer/smart_pointer_1_1.cpp
)
add_executable(
	day09_smart_pointer_2
	day09_smart_pointer/smart_pointer_2.cpp
)