cmake_minimum_required(VERSION 3.15)

project(day09_smartPointer)

# practice smart pointer
add_executable(
	day09_smart_pointer_0
	day09_smart_pointer/smart_pointer_0.cpp
)
add_executable(
	day09_smart_pointer_1
	day09_smart_pointer/smart_pointer_1.cpp
)
add_executable(
	day09_smart_pointer_1_1
	day09_smart_pointer/smart_pointer_1_1.cpp
)
add_executable(
	day09_smart_pointer_2
	day09_smart_pointer/smart_pointer_2.cpp
)
add_executable(
	day09_smart_pointer_3
	day09_smart_pointer/smart_pointer_3.cpp
)
add_executable(
	day09_smart_pointer_3_1_shared_ptr
	day09_smart_pointer/smart_pointer_3_1_shared_ptr.cpp
)
add_executable(
	day09_smart_pointer_4_teacher_student_ex
	day09_smart_pointer/smart_pointer_4_teacher_student_ex.cpp
)
add_executable(
	day09_smart_pointer_4_teacher_student
	day09_smart_pointer/smart_pointer_4_teacher_student.cpp
)
add_executable(
	day09_smart_pointer_4_teacher_student_s_w
	day09_smart_pointer/smart_pointer_4_teacher_student_s_w.cpp
)

# practice dynamic memory allocation


# practice macro
add_executable(
	day09_macro_variable
	day09_macro/macro_variable.cpp
)
add_executable(
	day09_macro_condition
	day09_macro/macro_condition.cpp
)