cmake_minimum_required(VERSION 3.15)

project(day10_template)


# practice template
add_executable(
	day10_template_00
	day10_template/template_00.cpp
)
add_executable(
	day10_template_01
	day10_template/template_01.cpp
)
add_executable(
	day10_template_02
	day10_template/template_02.cpp
)
add_executable(
	day10_template_03
	day10_template/template_03.cpp
)
add_executable(
	day10_template_04
	day10_template/template_04.cpp
)
add_executable(
	day10_template_05_varArg_T
	day10_template/template_05_varArg_T.cpp
)
add_executable(
	day10_template_06_recursive
	day10_template/template_06_recursive.cpp
)
add_executable(
	day10_template_07_recursive_unpack
	day10_template/template_07_recursive_unpack.cpp
)
add_executable(
	day10_template_07_recursive_unpack_self
	day10_template/template_07_recursive_unpack_self.cpp
)
add_executable(
	day10_template_07_recursive_unpack_add
	day10_template/template_07_recursive_unpack_add.cpp
)
add_executable(
	day10_template_08_initializer_list
	day10_template/template_08_initializer_list.cpp
)
add_executable(
	day10_template_08_initializer_list_self
	day10_template/template_08_initializer_list_self.cpp
)
add_executable(
	day10_template_09_myVector
	day10_template/template_09_myVector.cpp
)