cmake_minimum_required(VERSION 3.15)

project(day10_template_io)


# practice template
add_executable(
	day10_template_00
	day10_template/template_00.cpp
)
add_executable(
	day10_template_01
	day10_template/template_01.cpp
)
add_executable(
	day10_template_02
	day10_template/template_02.cpp
)
add_executable(
	day10_template_03
	day10_template/template_03.cpp
)
add_executable(
	day10_template_04
	day10_template/template_04.cpp
)
add_executable(
	day10_template_05_varArg_T
	day10_template/template_05_varArg_T.cpp
)
add_executable(
	day10_template_06_recursive
	day10_template/template_06_recursive.cpp
)
add_executable(
	day10_template_07_recursive_unpack
	day10_template/template_07_recursive_unpack.cpp
)
add_executable(
	day10_template_07_recursive_unpack_self
	day10_template/template_07_recursive_unpack_self.cpp
)
add_executable(
	day10_template_07_recursive_unpack_add
	day10_template/template_07_recursive_unpack_add.cpp
)
add_executable(
	day10_template_08_initializer_list
	day10_template/template_08_initializer_list.cpp
)
add_executable(
	day10_template_08_initializer_list_self
	day10_template/template_08_initializer_list_self.cpp
)
add_executable(
	day10_template_09_myVector
	day10_template/template_09_myVector.cpp
)


# practice IO
add_executable(
	day10_io_00_base
	day10_io/day10_base.cpp
)
add_executable(
	day10_io_01_precision_ws
	day10_io/day10_io_precision_ws.cpp
)
add_executable(
	day10_io_02_istringstream
	day10_io/day10_io_istringstream.cpp
)
add_executable(
	day10_io_03_ostringstream
	day10_io/day10_io_ostringstream.cpp
)
add_executable(
	day10_io_04_basic_io
	day10_io/day10_io_basic_io.cpp
)
add_executable(
	day10_io_05_basic_fread
	day10_io/day10_io_basic_fread.cpp
)
add_executable(
	day10_io_06_basic_fread_line
	day10_io/day10_io_basic_fread_line.cpp
)
add_executable(
	day10_io_07_basic_fread_matrix
	day10_io/day10_io_basic_fread_matrix.cpp
)
add_executable(
	day10_io_08_basic_fread_matrix_dot
	day10_io/day10_io_basic_fread_matrix_dot.cpp
)
add_executable(
	day10_io_09_basic_fread_matrix_dot_ex
	day10_io/day10_io_basic_fread_matrix_dot_ex.cpp
)
add_executable(
	day10_io_10_basic_fread_matrix_dot_simple
	day10_io/day10_io_basic_fread_matrix_dot_simple.cpp
)
add_executable(
	day10_io_11_basic_fread_matrix_dot_2
	day10_io/day10_io_basic_fread_matrix_dot_2.cpp
)
add_executable(
	day10_io_12_basic_fwrite_simple
	day10_io/day10_io_basic_fwrite_simple.cpp
)
add_executable(
	day10_io_13_basic_fwrite_matrix
	day10_io/day10_io_basic_fwrite_matrix.cpp
)