cmake_minimum_required(VERSION 3.15)

project(day12_threadConcurrency_singleton)

# practice concurrency
add_executable(
	day12_concurrency_00_moveBox_simple_ex
	day12_thread_concurrency/day12_concurrency_00_moveBox_ex.cpp	
)
add_executable(
	day12_concurrency_01_moveBox_OOD
	day12_thread_concurrency/day12_concurrency_01_moveBox_OOD.cpp	
)
add_executable(
	day12_concurrency_02_lockguard
	day12_thread_concurrency/day12_concurrency_02_lockguard.cpp	
)
add_executable(
	day12_concurrency_03_unique_lock
	day12_thread_concurrency/day12_concurrency_03_unique_lock.cpp	
)
add_executable(
	day12_concurrency_04_condition_variable
	day12_thread_concurrency/day12_concurrency_04_condition_variable.cpp	
)
add_executable(
	day12_concurrency_05_condition_variable_self
	day12_thread_concurrency/day12_concurrency_05_condition_variable_self.cpp	
)
add_executable(
	day12_concurrency_06_condition_variable_simple_arm
	day12_thread_concurrency/day12_concurrency_06_condition_variable_simple_arm.cpp	
)
add_executable(
	day12_concurrency_07_condition_variable_simple_arm_self
	day12_thread_concurrency/day12_concurrency_07_condition_variable_simple_arm_self.cpp	
)
add_executable(
	day12_concurrency_08_condition_variable_arm
	day12_thread_concurrency/day12_concurrency_08_condition_variable_arm.cpp	
)
add_executable(
	day12_concurrency_09_condition_variable_arm_self
	day12_thread_concurrency/day12_concurrency_09_condition_variable_arm_self.cpp	
)
add_executable(
	day12_concurrency_10_condition_variable_arm_OOD
	day12_thread_concurrency/day12_concurrency_10_condition_variable_arm_OOD.cpp	
)
add_executable(
	day12_concurrency_11_condition_variable_arm_OOD_self
	day12_thread_concurrency/day12_concurrency_11_condition_variable_arm_OOD_self.cpp	
)
add_executable(
	day12_concurrency_12_async_simple
	day12_thread_concurrency/day12_concurrency_12_async_simple.cpp	
)
add_executable(
	day12_concurrency_13_async_simple_2
	day12_thread_concurrency/day12_concurrency_13_async_simple_2.cpp	
)


# practice design mode
add_executable(
	day12_designMode_singleton_lazy
	day12_design_mode/day12_singleton_lazy.cpp
)
add_executable(
	day12_designMode_singleton_lazy_self
	day12_design_mode/day12_singleton_lazy_self.cpp
)
add_executable(
	day12_designMode_singleton_hungry
	day12_design_mode/day12_singleton_hungry.cpp
)
add_executable(
	day12_designMode_singleton_hungry_self
	day12_design_mode/day12_singleton_hungry_self.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem
	day12_design_mode/day12_singleton_lazy_problem.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem_self
	day12_design_mode/day12_singleton_lazy_problem_self.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem_self_2
	day12_design_mode/day12_singleton_lazy_problem_self_2.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem_self_3
	day12_design_mode/day12_singleton_lazy_problem_self_3.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem_2
	day12_design_mode/day12_singleton_lazy_problem_2.cpp
)
add_executable(
	day12_designMode_singleton_lazy_problem_2_self
	day12_design_mode/day12_singleton_lazy_problem_2_self.cpp
)